[package]
name = "teleprompter"
version = "2.6.0"
description = "Standalone teleprompter window"
authors = ["you"]
edition = "2021"

[lib]
name = "teleprompter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
